# hrm_nextbean_api/services/AccountServices/controller/router.go
@@ -8,4 +8,7 @@ import (
 
 func RegisterAccountRouter(r *mux.Router, db *sql.DB) {
 	r.HandleFunc("/login", HandleLogin(db)).Methods("POST")
+
+	account_router := r.PathPrefix("/account").Subrouter()
+	account_router.HandleFunc("", HandleCreateAccount(db)).Methods("POST")
 }
