# hrm_nextbean_api/services/AccountServices/model/mondel_creation.go
@@ -1,0 +1,8 @@
+package model
+
+type AccountCreationInfo struct {
+	UserName string `json:"user_name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+	Role     string `json:"role"`
+}
